<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="ai_glass_1">Unable to connect to the network at present, please check whether the network settings are normal</string>
    <string name="album_glass_1">recording</string>
    <string name="album_glass_10">Save to album successfully</string>
    <string name="album_glass_10_1">Failed to save to album</string>
    <string name="album_glass_10_2">Save to:%s</string>
    <string name="album_glass_11">No pictures yet</string>
    <string name="album_glass_11_0">No collection yet</string>
    <string name="album_glass_12">No video yet</string>
    <string name="album_glass_13">No recording yet</string>
    <string name="album_glass_14">WiFi connection failed</string>
    <string name="album_glass_15">Confirm to delete?</string>
    <string name="album_glass_16">Select All</string>
    <string name="album_glass_17">Finish</string>
    <string name="album_glass_18">%s items selected</string>
    <string name="album_glass_19">Deselect All</string>
    <string name="album_glass_2">today</string>
    <string name="album_glass_20">Share Success</string>
    <string name="album_glass_21">Successfully added</string>
    <string name="album_glass_22">Successfully canceled the collection</string>
    <string name="album_glass_23">Album Settings</string>
    <string name="album_glass_24">Image Watermark</string>
    <string name="album_glass_25">Add watermark when sharing pictures on social platforms</string>
    <string name="album_glass_26">Autosave</string>
    <string name="album_glass_28">When the picture is synchronized to the APP, it will be automatically saved to the mobile phone system album</string>
    <string name="album_glass_29">HeyCyan wants to access your system photo album</string>
    <string name="album_glass_3">yesterday</string>
    <string name="album_glass_30">If not allowed, you will not be able to save photos locally</string>
    <string name="album_glass_31">Go to Settings</string>
    <string name="album_glass_31_1">Go to edit</string>
    <string name="album_glass_32">Shot on AI Glasses</string>
    <string name="album_glass_33">WiFi connection failed, retrying</string>
    <string name="album_glass_34">Start Upgrading</string>
    <string name="album_glass_35">Please turn on your mobile WiFi</string>
    <string name="album_glass_36">The glasses are in recording mode. Please end it before importing.</string>
    <string name="album_glass_37">The glasses are in dialogue mode, please end it before importing</string>
    <string name="album_glass_38">The glasses are in OTA mode, please end it before importing</string>
    <string name="album_glass_39">The glasses are in recording mode. Please end it before importing.</string>
    <string name="album_glass_4">Connecting to Glasses Wi-Fi...</string>
    <string name="album_glass_40">The glasses are in photo mode, please end it before importing</string>
    <string name="album_glass_41">The battery level of the glasses is less than 15%, please charge first</string>
    <string name="album_glass_42">Retry</string>
    <string name="album_glass_43">The recording file is being processed, please try again later</string>
    <string name="album_glass_44">You are currently in transfer mode. Please end the transfer before starting the translation</string>
    <string name="album_glass_45">Glasses are in transfer mode, please restart after the transfer is complete</string>
    <string name="album_glass_46">Glasses are in transfer mode, please restart after the transfer is complete</string>
    <string name="album_glass_5">save</string>
    <string name="album_glass_6">share</string>
    <string name="album_glass_7">collect</string>
    <string name="album_glass_8">edit</string>
    <string name="album_glass_9">delete</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_image_desc">HeyCyan</string>
    <string name="app_name">HeyCyan</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="ble_glass_1">equipment</string>
    <string name="ble_glass_10">After restarting, the glasses will be automatically reconnected. \nAre you sure you want to continue?</string>
    <string name="ble_glass_11">Upgrading your firmware</string>
    <string name="ble_glass_12">Firmware upgrade in progress...</string>
    <string name="ble_glass_13">Upgrade failed, please try again</string>
    <string name="ble_glass_14">Upgrade Successfully</string>
    <string name="ble_glass_15">Downloading firmware...</string>
    <string name="ble_glass_18">Bluetooth has been disconnected, please connect the device first</string>
    <string name="ble_glass_19">The firmware version is up to date</string>
    <string name="ble_glass_2">The following devices were found</string>
    <string name="ble_glass_20">No location permission, function cannot be used</string>
    <string name="ble_glass_20_1">Without microphone permission, this feature cannot be used</string>
    <string name="ble_glass_21">The battery level of the glasses is less than %s%%, please charge first</string>
    <string name="ble_glass_22">%ss</string>
    <string name="ble_glass_23">%smin</string>
    <string name="ble_glass_24">WiFi download</string>
    <string name="ble_glass_25">WiFi downloading... %s%%</string>
    <string name="ble_glass_26">Firmware download</string>
    <string name="ble_glass_27">Firmware downloading... %s%%</string>
    <string name="ble_glass_28">WiFi upgrade</string>
    <string name="ble_glass_29">WiFi upgrade... %s%%</string>
    <string name="ble_glass_3">connect</string>
    <string name="ble_glass_30">Firmware upgrade</string>
    <string name="ble_glass_31">Firmware installing...%s%%</string>
    <string name="ble_glass_32">BT is not connected</string>
    <string name="ble_glass_33">After connecting, you can use audio and call functions</string>
    <string name="ble_glass_34">Connect</string>
    <string name="ble_glass_35">Important tips: Do not exit or turn off the screen of your phone during the upgrade, and make sure the glasses are powered on, otherwise the upgrade may fail!</string>
    <string name="ble_glass_36">The glasses have taken photos, please import them from the APP album</string>
    <string name="ble_glass_37">The glasses have started recording, please import them from the APP album</string>
    <string name="ble_glass_38">The glasses have started recording, please import them from the APP album</string>
    <string name="ble_glass_39">Connecting</string>
    <string name="ble_glass_4">Connecting...</string>
    <string name="ble_glass_40">%sh</string>
    <string name="ble_glass_41">Insufficient memory, please import resources from the APP album and try again</string>
    <string name="ble_glass_42">AI assistant is out</string>
    <string name="ble_glass_43">Reminder setting function is not supported</string>
    <string name="ble_glass_44">No recording permission, function is not available, please authorize</string>
    <string name="ble_glass_45">Tell me what you see?</string>
    <string name="ble_glass_5">Unpair glasses?</string>
    <string name="ble_glass_6">Are you sure you want to unpair the current glasses? You need to re-pair them before you can use them again.</string>
    <string name="ble_glass_7">Remove glasses</string>
    <string name="ble_glass_8">Are you sure you want to restore factory settings?</string>
    <string name="ble_glass_9">Restoring factory settings will clear all data on the glasses.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="g_app_guide_1">To prevent the mobile system from interrupting the operation of the application and affecting the use of Bluetooth sharing network, message notification and other functions, please complete the following settings:</string>
    <string name="g_app_guide_2">Battery optimization</string>
    <string name="g_app_guide_3">Avoid the system interrupting the operation of the application to save power</string>
    <string name="g_app_guide_4">Allow background operation</string>
    <string name="g_app_guide_5">Ensure that the application can still run actively after exiting the background</string>
    <string name="g_app_guide_6">Go to settings</string>
    <string name="g_app_guide_7">View tutorial</string>
    <string name="h_glass_244">Current bound mobile phone number</string>
    <string name="h_glass_245">Change mobile phone number</string>
    <string name="h_glass_246">After modification, the personal information of the current account remains unchanged</string>
    <string name="h_glass_260">After your account is cancelled, you will no longer be able to use the account, including but not limited to:</string>
    <string name="h_glass_261">1. Unable to log into the account, and all login methods under the account will be removed. \n2. Personal information and file information will be cleared and cannot be retrieved. \n3. All third-party platform associated identities (such as email addresses) will be cancelled and cannot be restored.</string>
    <string name="h_glass_262">Abandon cancellation</string>
    <string name="h_glass_95">Next step</string>
    <string name="h_glass_96">Searching devices...</string>
    <string name="h_glass_96_1">No glasses found</string>
    <string name="h_glass_97">Please keep the glasses turned on, keep the mobile phone Bluetooth and positioning switch turned on, and confirm that the blue indicator light of the glasses is flashing.</string>
    <string name="h_glass_97_1">Please turn on the glasses, keep the mobile phone Bluetooth and positioning switch turned on, and make sure the glasses are not paired with other mobile phones.</string>
    <string name="h_glass_99">Retry</string>
    <string name="version_glass_2">Downloading your version</string>
    <string name="version_glass_3">Downloading version...</string>
</resources>