<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/g_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/title"
        layout="@layout/layout_title_bar"/>
    <ImageView
        android:id="@+id/iv_phone_logo"
        android:layout_width="@dimen/glass_dp_90"
        android:layout_height="@dimen/glass_dp_90"
        android:layout_marginTop="@dimen/glass_dp_70"
        android:src="@mipmap/app_icon"
        android:contentDescription="@string/app_image_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <TextView
        android:textSize="@dimen/glass_sp_14"
        android:textColor="@color/g_white"
        android:id="@+id/tv_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/glass_dp_72"
        android:text="@string/h_glass_260"
        android:layout_marginStart="@dimen/glass_dp_24"
        android:layout_marginEnd="@dimen/glass_dp_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_phone_logo"/>
    <TextView
        android:textSize="@dimen/glass_sp_14"
        android:textColor="@color/color_A8A8A8"
        android:gravity="start"
        android:id="@+id/tv_hint2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/glass_dp_36"
        android:text="@string/h_glass_261"
        android:lineSpacingExtra="@dimen/glass_dp_4"
        android:layout_marginStart="@dimen/glass_dp_24"
        android:layout_marginEnd="@dimen/glass_dp_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint"/>
    <TextView
        android:textSize="@dimen/glass_sp_14"
        android:textColor="@color/g_btn_submit_color"
        android:gravity="center"
        android:id="@+id/tv_confirm"
        android:background="@mipmap/btn_bg_screen"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/glass_dp_50"
        android:layout_marginTop="@dimen/glass_dp_74"
        android:layout_marginBottom="@dimen/glass_dp_10"
        android:text="@string/h_glass_95"
        app:layout_constraintBottom_toTopOf="@+id/tv_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:textSize="@dimen/glass_sp_14"
        android:textColor="@color/g_white"
        android:gravity="center"
        android:id="@+id/tv_cancel"
        android:background="@drawable/bg_white_44_stroke_shape"
        android:layout_width="0dp"
        android:layout_height="@dimen/glass_dp_50"
        android:layout_marginBottom="@dimen/glass_dp_50"
        android:text="@string/h_glass_262"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/tv_confirm"
        app:layout_constraintRight_toRightOf="@+id/tv_confirm"/>
</androidx.constraintlayout.widget.ConstraintLayout>
