<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/g_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/title"
        layout="@layout/layout_title_bar"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/glass_dp_16"
        android:layout_marginEnd="@dimen/glass_dp_16"
        app:layout_constraintTop_toBottomOf="@+id/title">
        <TextView
            android:textColor="@color/g_color_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/glass_dp_10"
            android:text="@string/g_app_guide_1"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_phone"
            android:background="@drawable/main_setting_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/glass_dp_16"
            android:minHeight="@dimen/glass_dp_100">
            <TextView
                android:textSize="@dimen/glass_sp_13"
                android:textColor="@color/g_color_6"
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/glass_dp_20"
                android:text="@string/g_app_guide_2"
                android:layout_marginStart="@dimen/glass_dp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="@dimen/glass_sp_13"
                android:textColor="@color/g_color_7"
                android:id="@+id/tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/glass_dp_20"
                android:text="@string/g_app_guide_3"
                android:layout_marginStart="@dimen/glass_dp_16"
                android:layout_marginEnd="@dimen/glass_dp_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_test_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_1"/>
            <TextView
                android:textSize="@dimen/glass_sp_13"
                android:textColor="@color/g_color_4"
                android:gravity="center"
                android:id="@+id/tv_test_1"
                android:background="@mipmap/ic_btn_edit_info_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_app_guide_6"
                android:contentDescription="@string/app_image_desc"
                android:paddingStart="@dimen/glass_dp_10"
                android:paddingEnd="@dimen/glass_dp_10"
                android:layout_marginStart="@dimen/glass_dp_12"
                android:layout_marginEnd="@dimen/glass_dp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctl_whatsapp"
            android:background="@drawable/main_setting_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/glass_dp_16"
            android:minHeight="@dimen/glass_dp_100">
            <TextView
                android:textSize="@dimen/glass_sp_13"
                android:textColor="@color/g_color_6"
                android:id="@+id/tv_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/glass_dp_20"
                android:text="@string/g_app_guide_4"
                android:layout_marginStart="@dimen/glass_dp_16"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="@dimen/glass_sp_13"
                android:textColor="@color/g_color_7"
                android:id="@+id/tv_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/glass_dp_10"
                android:layout_marginBottom="@dimen/glass_dp_20"
                android:text="@string/g_app_guide_5"
                android:layout_marginStart="@dimen/glass_dp_16"
                android:layout_marginEnd="@dimen/glass_dp_10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_2"
                app:layout_constraintTop_toBottomOf="@+id/tv_bg"/>
            <TextView
                android:textSize="@dimen/glass_sp_13"
                android:textColor="@color/g_color_4"
                android:gravity="center"
                android:id="@+id/btn_2"
                android:background="@mipmap/ic_btn_edit_info_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/g_app_guide_7"
                android:contentDescription="@string/app_image_desc"
                android:paddingStart="@dimen/glass_dp_10"
                android:paddingEnd="@dimen/glass_dp_10"
                android:layout_marginEnd="@dimen/glass_dp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
