<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/g_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/titleBar"
        layout="@layout/layout_title_bar"/>
    <TextView
        android:textColor="@color/ble_text_2"
        android:id="@+id/tv_search_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ble_glass_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/device_rcv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/glass_dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_search_1"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_search_ing"
        android:background="@color/g_bg_color"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar">
        <ImageView
            android:id="@+id/iv_searching"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/glass_dp_200"
            android:src="@mipmap/glass_search_device_1"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="@dimen/glass_sp_14"
            android:textColor="@color/g_album_text_2"
            android:id="@+id/tv_scan_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/h_glass_96"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_searching"/>
        <TextView
            android:textSize="@dimen/glass_sp_12"
            android:textColor="@color/g_album_text_3"
            android:gravity="center"
            android:id="@+id/tv_content_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/glass_dp_30"
            android:text="@string/h_glass_97"
            android:layout_marginStart="@dimen/glass_dp_16"
            android:layout_marginEnd="@dimen/glass_dp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_scan_status"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_search_again"
        android:background="@color/g_bg_color"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar">
        <ImageView
            android:id="@+id/image_no_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/glass_dp_200"
            android:src="@mipmap/ble_search_again_glasses"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="@dimen/glass_sp_14"
            android:textColor="@color/g_album_text_2"
            android:id="@+id/tv_scan_no_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/glass_dp_40"
            android:text="@string/h_glass_96_1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_no_1"/>
        <TextView
            android:textSize="@dimen/glass_sp_12"
            android:textColor="@color/g_album_text_3"
            android:gravity="center"
            android:id="@+id/tv_content_no_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/glass_dp_30"
            android:text="@string/h_glass_97_1"
            android:layout_marginStart="@dimen/glass_dp_16"
            android:layout_marginEnd="@dimen/glass_dp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_scan_no_status"/>
        <TextView
            android:textSize="@dimen/glass_sp_14"
            android:textColor="@color/g_btn_submit_color"
            android:gravity="center"
            android:id="@+id/tv_restart_search"
            android:background="@mipmap/btn_bg_screen"
            android:layout_width="0dp"
            android:layout_height="@dimen/glass_dp_50"
            android:layout_marginBottom="@dimen/glass_dp_60"
            android:text="@string/h_glass_99"
            android:layout_marginStart="@dimen/glass_dp_16"
            android:layout_marginEnd="@dimen/glass_dp_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ctl_connecting"
        android:background="@color/g_bg_color"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleBar">
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/image_connecting"
            android:layout_width="@dimen/glass_dp_160"
            android:layout_height="@dimen/glass_dp_160"
            android:layout_marginBottom="@dimen/glass_dp_72"
            android:indeterminate="true"
            android:contentDescription="@string/app_image_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="@dimen/glass_sp_18"
            android:textColor="@color/ble_text_1"
            android:gravity="center"
            android:id="@+id/tv_connecting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/glass_dp_30"
            android:text="@string/ble_glass_4"
            android:layout_marginStart="@dimen/glass_dp_26"
            android:layout_marginEnd="@dimen/glass_dp_26"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_connecting"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
