<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/g_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/title"
        layout="@layout/layout_title_bar"/>
    <ImageView
        android:id="@+id/iv_phone_logo"
        android:layout_width="@dimen/glass_dp_70"
        android:layout_height="@dimen/glass_dp_70"
        android:layout_marginTop="@dimen/glass_dp_110"
        android:src="@mipmap/ic_modify_phone_logo"
        android:contentDescription="@string/app_image_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <TextView
        android:textSize="@dimen/glass_sp_14"
        android:textColor="@color/g_white"
        android:id="@+id/tv_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/glass_dp_38"
        android:text="@string/h_glass_244"
        app:layout_constraintLeft_toLeftOf="@+id/iv_phone_logo"
        app:layout_constraintRight_toRightOf="@+id/iv_phone_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_phone_logo"/>
    <TextView
        android:textSize="@dimen/glass_sp_28"
        android:textStyle="bold"
        android:textColor="@color/g_white"
        android:id="@+id/tv_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/glass_sp_14"
        app:layout_constraintLeft_toLeftOf="@+id/tv_hint"
        app:layout_constraintRight_toRightOf="@+id/tv_hint"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint"/>
    <TextView
        android:textSize="@dimen/glass_sp_14"
        android:textColor="@color/g_btn_submit_color"
        android:gravity="center"
        android:id="@+id/tv_confirm"
        android:background="@mipmap/btn_bg_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/glass_dp_74"
        android:text="@string/h_glass_245"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_phone"/>
    <TextView
        android:textSize="@dimen/glass_sp_14"
        android:textColor="@color/color_A8A8A8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/glass_dp_28"
        android:text="@string/h_glass_246"
        app:layout_constraintLeft_toLeftOf="@+id/iv_phone_logo"
        app:layout_constraintRight_toRightOf="@+id/iv_phone_logo"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirm"/>
</androidx.constraintlayout.widget.ConstraintLayout>
