<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/g_bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        android:id="@+id/title"
        layout="@layout/layout_title_bar"/>
    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/glass_dp_160"
        android:src="@mipmap/ic_download_logo"
        android:contentDescription="@string/app_image_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"/>
    <TextView
        android:textSize="@dimen/glass_sp_18"
        android:textColor="@color/g_white"
        android:gravity="center"
        android:id="@+id/tv_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/glass_dp_24"
        android:text="@string/version_glass_2"
        android:maxLines="2"
        android:layout_marginStart="@dimen/glass_dp_24"
        android:layout_marginEnd="@dimen/glass_dp_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"/>
    <ProgressBar
        android:id="@+id/pb_progress"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="@dimen/glass_dp_128"
        android:max="100"
        android:progress="44"
        android:progressDrawable="@drawable/h_progressbar_white"
        android:layout_marginStart="@dimen/glass_dp_16"
        android:layout_marginEnd="@dimen/glass_dp_16"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hint"
        style="?android:attr/progressBarStyleHorizontal"/>
    <TextView
        android:textSize="@dimen/glass_sp_14"
        android:textColor="@color/g_white"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/glass_dp_8"
        android:text="@string/version_glass_3"
        app:layout_constraintLeft_toLeftOf="@+id/pb_progress"
        app:layout_constraintRight_toRightOf="@+id/pb_progress"
        app:layout_constraintTop_toBottomOf="@+id/pb_progress"/>
</androidx.constraintlayout.widget.ConstraintLayout>
